--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .logo {
-	background: url(/img/logo.svg) 0 100% no-repeat;
+	background: url(../img/logo.svg) 0 100% no-repeat;
 	background-size: contain;
 	display: block;
 	height: 24px;
@@ -84,7 +84,7 @@ body {
 	max-width: 100%;
 	height: 172px;
 	border-radius: 16px;
-	background: url(/img/back.svg) 50% 100% no-repeat;
+	background: url(../img/back.svg) 50% 100% no-repeat;
 }
 
 .status__content {
